# opencvTest

./: CMakeLists.txt  CMakeProject2.cpp  CMakeProject2.h
